docs/v1.4.5/en/api/campaign-ext/ClanMemberRolesCampaignBehavior.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `ClanMemberRolesCampaignBehavior`
- [← Area / Back to campaign-ext](./)
- [↑ API Index](../)
- [🏠 Home v1.4.5](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# ClanMemberRolesCampaignBehavior

**Namespace:** SandBox.CampaignBehaviors
**Module:** SandBox.CampaignBehaviors
**Type:** `public class ClanMemberRolesCampaignBehavior : CampaignBehaviorBase, IMissionPlayerFollowerHandler`
**Base:** `CampaignBehaviorBase`
**File:** `Bannerlord.Source/Modules.SandBox/SandBox/SandBox.CampaignBehaviors/ClanMemberRolesCampaignBehavior.cs`

## Overview

`ClanMemberRolesCampaignBehavior` lives in `SandBox.CampaignBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `SandBox.CampaignBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** Handles logic related to `register events`.

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** Handles logic related to `sync data`.

### IsFollowingPlayer
`public bool IsFollowingPlayer(Hero hero)`

**Purpose:** Handles logic related to `is following player`.

### RemoveFollowingHero
`public void RemoveFollowingHero(Hero hero)`

**Purpose:** Removes `following hero` from the current collection or state.

## Usage Example

```csharp
var value = new ClanMemberRolesCampaignBehavior();
value.RegisterEvents();
```

## See Also

- [Complete Class Catalog](../catalog)